--- a/templates/inner-page.html
+++ b/templates/inner-page.html
@@ -111,15 +111,9 @@
       </div>
     </section><!-- End Breadcrumbs Section -->
 
-    <section class="inner-page">
-      <div class="container">
-        <p>
-          Example inner page template
-        </p>
-      </div>
-    </section>
-
-  </main><!-- End #main -->
+   {% block body %}
+   	
+   {% endblock %}
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
